# sysmon

./: pyproject.toml
docs/: design.md
src/: collector.py  color_values.py  display.py  logger.py  main.py  modify_metrics.py  report.py  warn.py
src/sysmon_nadavush/: logger.py  main.py  modify_metrics.py  report.py
